# tout_est_calme

./: .gitignore  .gitmodules  ANALYSIS.md  README.md  patch.xml
csound_opcode/: CMakeLists.txt  dsp.hpp  live.csd  live.orc  old_test.csd  sirenes.cpp  sirenes_test.cpp  test.csd
csound_opcode/cmake/Modules/: FindCsound.cmake
esp32/: backup.c  osc.idyl
esp32/ESP_sketch/: ESP_sketch.ino  osc_parser.h  voltage_control.h  voltage_control_old.h  voltage_control_spec.md
